freebsd-glue (0.2.2) UNRELEASED; urgency=low

  * Add strnstr().

 -- Robert Millan <rmh@debian.org>  Sat, 30 Nov 2013 12:09:03 +0100

freebsd-glue (0.2.1) unstable; urgency=low

  * Fix broken external references in mac_set.c.

 -- Robert Millan <rmh@debian.org>  Fri, 29 Nov 2013 18:38:51 +0100

freebsd-glue (0.2.0) experimental; urgency=low

  * Provide a shared version of libfreebsd-glue.

 -- Robert Millan <rmh@debian.org>  Fri, 29 Nov 2013 14:05:57 +0100

freebsd-glue (0.1.15) unstable; urgency=low

  * Add INADDR_ALLRPTS_GROUP, INADDR_CARP_GROUP, INADDR_PFSYNC_GROUP and
    INADDR_ALLMDNS_GROUP magic IPv4 addresses.
  * Add the mac_* family of functions (as defined by <sys/mac.h>.
  * Move <sys/stdint.h> to <stdint.h>.
  * Add <sys/stdint.h> (as #include stub).
  * Add _PATH_DEVZERO.
  * Split additions for libcrypt, libutil and libz into separate
    libraries.
  * Add getbootfile().
  * Add <ndbm.h> stub (for libgdbm).
  * Add <sys/file.h> (stub for <sys/kglue/sys/file.h>).
  * Add <sys/user.h> and <sys/proc.h>.
  * Add _PATH_UUCPLOCK (diverge from upstream as per FHS).
  * Add mac_set family of functions.
  * Update copyright information.

 -- Robert Millan <rmh@debian.org>  Sun, 24 Nov 2013 14:22:23 +0100

freebsd-glue (0.1.14) unstable; urgency=low

  * Redirect to native <machine/elf.h> on kFreeBSD.
  * Build get_elf_arch.c using -Wall -Werror. Fix missing return and
    implicit declarations.

 -- Robert Millan <rmh@debian.org>  Wed, 30 Oct 2013 00:04:50 +0100

freebsd-glue (0.1.13) unstable; urgency=low

  * Disable kernel-specific paths on non-kFreeBSD.
  * Add <osreldate.h> and <sys/limits.h>.
  * Add STAILQ_LAST() to <sys/queue.h>.
  * Move CFLAGS to src/Makefile.
  * Expand <sys/elf32.h> and <sys/elf64.h> to support non-kFreeBSD
    platforms.
  * Add <machine/elf.h> (with tricky build magic to generate ELF_ARCH).

 -- Robert Millan <rmh@debian.org>  Mon, 28 Oct 2013 23:10:03 +0100

freebsd-glue (0.1.12) unstable; urgency=low
